MET-3067: Hide unfinished and invalid tasks.